--- a/finalproject/styles/final_base.css
+++ b/finalproject/styles/final_base.css
@@ -369,7 +369,7 @@ background-color: rgba(0, 0, 0, 0.8);
 background-color: var(--background);
 padding: 30px 40px;
 border-radius: 10px;
-box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+ 
 max-width: 500px;
 width: 80%;
 }
@@ -471,3 +471,49 @@ transform: translateY(-2px);
   border: 0;
   border-radius: 10px;
 }
+
+/* THANK YOU PAGE */
+.thankyou-folder {
+  display: grid;
+  gap: 20px;
+}
+
+.left-thankyou {
+  border: 2px solid var(--mainbody);
+  margin-left: 10px;
+  width: 95%;
+  margin-right: 10px;
+}
+
+.right-thankyou {
+  border: 2px solid var(--mainbody);
+  margin-left: 10px;
+  width: 95%;
+  margin-right: 10px;
+}
+
+.right-thankyou img {
+  padding-top: 20px;
+  max-width: 100%;
+  height: auto;
+}
+
+
+.headlight {
+    position: absolute;
+    top: 126%;    
+    left: 39%;   
+    width: 80px;
+    height: 20px;
+    background: radial-gradient(circle, rgba(255,255,200,0.8) 0%, rgba(255,255,200,0) 80%);
+    border-radius: 50%;
+    animation: flash 1s infinite alternate;
+    pointer-events: none; /* so it doesn't block clicks */
+}
+
+@keyframes flash {
+    0% { opacity: 0; transform: scale(0.1); }
+    50% { opacity: 2; transform: scale(1.2); }
+    100% { opacity: 0; transform: scale(0.1); }
+}
+
