--- a/finalproject/styles/final_medium.css
+++ b/finalproject/styles/final_medium.css
@@ -91,4 +91,49 @@
   grid-template-columns: 1fr 1fr;
 }
 
+/* THANKYOU PAGE */
+.thankyou-folder {
+  display: flex;
+  text-align: left;
+  font-size: 1.5rem;  
+}
+
+.left-thankyou {
+  border: 2px solid var(--mainbody);
+  margin-left: 25px;
+  width: 50%;
+}
+
+.right-thankyou {
+  margin-left: 25px;
+  border: 2px solid var(--mainbody);
+  width: 50%;
+  margin-right: 25px;
+}
+
+ 
+.car-wrapper {
+    position: relative;
+    display: inline-block;
+}
+
+.headlight {
+    position: absolute;
+    top: 51%;    
+    left: 39%;   
+    width: 80px;
+    height: 20px;
+    background: radial-gradient(circle, rgba(255,255,200,0.8) 0%, rgba(255,255,200,0) 80%);
+    border-radius: 50%;
+    animation: flash 1s infinite alternate;
+    pointer-events: none; /* so it doesn't block clicks */
+}
+
+@keyframes flash {
+    0% { opacity: 0; transform: scale(0.1); }
+    50% { opacity: 2; transform: scale(1.2); }
+    100% { opacity: 0; transform: scale(0.1); }
+}
+
+
 }
