--- a/finalproject/styles/final_base.css
+++ b/finalproject/styles/final_base.css
@@ -15,11 +15,18 @@ body {
 background-color: var(--background);
 }
 
+h1, h2, h3, h4, h5, h6 {
+color: var(--font-headings);
+}
+
+body, p, li, a, span {
+color: var(--mainbody); 
+}
+
 
 .menu-container header {
 display: flex;
 flex-direction: column;
-align-items: left;
 justify-content: space-between;
 }
 
@@ -165,12 +172,21 @@ top: 62%; /* adjust depending on nav height */
 .cta a {
 margin-top: 15px; 
 display: inline-block;  
-background-color: var(--mainbody);
-color: var(--accent-CTA);
+background-color: var(--nav);
+color: var(--mainbody);
 padding:  10px 20px;
 font-size: 1rem;
 border-radius: 10px;
+animation: pulseBg 1s ease-in-out infinite;
 }
+
+@keyframes pulseBg {
+ 
+  0% { background-color: var(--mainbody); }
+  75% { background-color: var(--mainbody); }
+ 
+}
+
 
 .cta a:hover {
 background-color: var(--highlights);
@@ -260,6 +276,10 @@ font-size: 2rem;
 padding: 10px;
 margin: 10px;
 background-color: var(--mainbody);
+color: var(--background);
+}
+
+.about-us p {
 color: var(--background);
 }
 
@@ -361,8 +381,16 @@ background-color: var(--background);
 color: var(--mainbody);
 border: none;
 border-radius: 8px;
+padding: 8px 16px;
 cursor: pointer;
-font-size: 1rem;
+animation: pulseBg 1s ease-in-out infinite;
+}
+
+@keyframes pulseBg {
+  0% { background-color: var(--highlights); }
+  50% { background-color: var(--highlights); }
+  75% { background-color: var(--mainbody); }
+  100% { background-color: var(--accent-CTA); }
 }
 
 dialog::backdrop {
@@ -456,12 +484,35 @@ transform: translateY(-2px);
   flex: 1 1 400px; /* grow/shrink with min width */
   max-width: 500px;
 }
+
+.promo-folder p {
+  flex: 1 1 300px;  
+  max-width: 400px;
+  font-size: 1.2rem;
+}
+.promo-folder {
+  margin-top: 3rem;
+  padding: 1rem;
+  background-color: var(--accent-CTA);
+  border-radius: 10px;
+  text-align: center;
+  animation: pulseBg 1s ease-in-out infinite;
+}
+
+@keyframes pulseBg {
+  0% { background-color: var(--highlights); }
+  50% { background-color: var(--highlights); }
+  75% { background-color: var(--mainbody); }
+  100% { background-color: var(--accent-CTA); }
+}
+
 .map-folder {
   display: flex;
   flex-direction: column; /* stack heading and map vertically */
   align-items: center;    /* center horizontally */
   margin-top: 3rem;       /* spacing from above content */
   gap: 1rem;              /* space between heading and map */
+  background-color: var(--highlights);
 }
 
 .map-folder h2 {
@@ -514,7 +565,7 @@ transform: translateY(-2px);
     background: radial-gradient(circle, rgba(255,255,200,0.8) 0%, rgba(255,255,200,0) 80%);
     border-radius: 50%;
     animation: flash 1s infinite alternate;
-    pointer-events: none; /* so it doesn't block clicks */
+     
 }
 
 @keyframes flash {
