--- a/finalproject/styles/final_base.css
+++ b/finalproject/styles/final_base.css
@@ -438,6 +438,8 @@ border: 1px solid var(--mainbody);
 border-radius: 6px;
 font-size: 14px;
 box-sizing: border-box;
+height: 44px;
+border-left: 10px solid var(--mainbody);
 }
 
 input:focus,
